# SUGC

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  pyproject.toml
.claude/: .nfsc863a67c67bcb736000009c0
.github/workflows/: CI.yml  publish.yml
conda/: meta.yaml
examples/: SCOPE.ipynb  pairs_1d.ipynb  pairs_smu.ipynb
python/scope/: __init__.py
python/sugc/: __init__.py
recipe/: meta.yaml
src/: cell_list.rs  lib.rs  pairs_2d.rs  pairs_npoint.rs  pairs_smu.rs
sugc/: lib.rs  pairs_1d.rs  pairs_2d.rs  pairs_npoint.rs  pairs_npoint_gpu.rs  pairs_smu.rs
tests/performance/: benchmark_1m.py  benchmark_1m.slurm  benchmark_corrfunc.py  benchmark_npoint.py  benchmark_scale.py  benchmark_smu.py
tests/unit/: test_npoint.py  test_pairs_1d.py  test_pairs_2d.py  test_pairs_smu.py  test_scope.py
