[package]
name = "scope"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"

[lib]
name = "_scope"
crate-type = ["cdylib"]

[dependencies]
pyo3  = { version = "0.23", features = ["extension-module", "abi3-py39"] }
numpy = "0.23"
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
