[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "scope"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["numpy>=1.23", "matplotlib>=3.8"]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
module-name = "scope._scope"
