[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sugc"
version = "0.1.0"
description = "Sparse Unbiased Galaxy Clustering - high-performance hybrid Rust/Python correlation functions"
authors = [
    { name = "Oscar Hickman", email = "oscar.hickman17@alumni.imperial.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.23", "matplotlib>=3.8"]

[project.urls]
Homepage = "https://github.com/OscarHickman/SUGC"
Repository = "https://github.com/OscarHickman/SUGC"
"Bug Tracker" = "https://github.com/OscarHickman/SUGC/issues"

[tool.maturin]
python-source = "python"
module-name = "sugc._sugc"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
